Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/receiver/DuplicateTypeAnnotation.out
DuplicateTypeAnnotation.java:10:16: compiler.err.duplicate.annotation.missing.container: A
1 error
